--- a/src/predict_top_3_scores.ipynb
+++ b/src/predict_top_3_scores.ipynb
@@ -2544,6 +2544,115 @@
     "print_learning_curve(HistGradientBoostingRegressor(learning_rate=0.04551020408163265, max_depth=8,\n",
     "                              max_iter=10000, max_leaf_nodes=256))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = HistGradientBoostingRegressor(learning_rate=0.04551020408163265, max_depth=8,\n",
+    "                              max_iter=10000, max_leaf_nodes=256,l2_regularization=2).fit(X_train_augmented,y_train_augmented)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "categorical_features=[True,True,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,True,True,True,True,True,True,True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "parameters = {'l2_regularization':np.linspace(0,100),\"min_samples_leaf\":np.linspace(0,20)}\n",
+    "\n",
+    "grid = RandomizedSearchCV(HistGradientBoostingRegressor(learning_rate=0.04551020408163265, max_depth=8,\n",
+    "                              max_iter=10000, max_leaf_nodes=256),parameters,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = grid.fit(X_train_augmented,y_train_augmented)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HistGradientBoostingRegressor(l2_regularization=32.6530612244898,\n",
+       "                              learning_rate=0.04551020408163265, max_depth=8,\n",
+       "                              max_iter=10000, max_leaf_nodes=256,\n",
+       "                              min_samples_leaf=4.081632653061225)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.4098773022296146e-06"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "(mean_squared_error(y_train,grid.best_estimator_.predict(X_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.8438636119693839"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(HistGradientBoostingRegressor(l2_regularization=32.6530612244898,\n",
+    "                              learning_rate=0.04551020408163265, max_depth=8,\n",
+    "                              max_iter=10000, max_leaf_nodes=256,\n",
+    "                              min_samples_leaf=4.081632653061225),X_train_augmented,y_train_augmented,cv=10,n_jobs=-1,scoring=\"neg_root_mean_squared_error\").mean()"
+   ]
   }
  ],
  "metadata": {
